sandbox/output
Patient.java:21: error: method calculateOverlappedDays in class Patient cannot be applied to given types;
        return calculateOverlappedDays(medicine, clashingMedicine);
               ^
  required: List<Medicine>
  found: Medicine,Medicine
  reason: actual and formal argument lists differ in length
1 error
